# my-py-modules

./: .gitignore  README.md  pyproject.toml
src/my_modules/: kubernetes.py  logger.py  postgres.py  windows.py
src/my_modules/android/: __init__.py  adb.py  device.py
