[project]
name = "my-modules"
version = "0.1.0"
description = "My custom python modules."
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.6"
dependencies = [
    "rich>=10.11.0",
    "uiautomator2>=0.2.3",
]

[project.scripts]
my-modules = "my_modules:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=5.1.4",
    "ipywidgets>=7.8.5",
]
